@@ -2119,7 +2119,8 @@ if test x"$*" = x; then
 	tests="${tests} recase"
 	# Multiple root directories and low-level protocol tests.
 	tests="${tests} multiroot multiroot2 multiroot3 multiroot4"
-	tests="${tests} rmroot reposmv pserver server server2 client"
+	tests="$tests rmroot reposmv pserver server server2 server3"
+	tests="$tests client client2"
 	tests="${tests} dottedroot fork commit-d template"
 	tests="${tests} writeproxy writeproxy-noredirect writeproxy-ssh"
 	tests="${tests} writeproxy-ssh-noredirect"
@@ -32171,6 +32172,63 @@ EOF
 
 
 
+	server3)
+	  # Test that various checks on the Root request generate the correct
+	  # error messages.
+	  if $remote; then
+	    # As a control, a valid request.
+	    dotest server3-1 "$servercvs server" 'ok' <<EOF
+Root $CVSROOT_DIRNAME
+Directory .
+$CVSROOT_DIRNAME
+Unchanged foo
+noop
+EOF
+
+	    dotest server3-2 "$servercvs server" \
+"E Root somewhere/over/the/rainbow must be an absolute pathname
+error  " <<EOF
+Root somewhere/over/the/rainbow
+noop
+EOF
+
+	    dotest server3-3 "$servercvs server" \
+"E Protocol error: Duplicate Root request, for $CVSROOT_DIRNAME
+error  " <<EOF
+Root $CVSROOT_DIRNAME
+Root $CVSROOT_DIRNAME
+noop
+EOF
+
+	    dotest server3-4 "$servercvs server" \
+"E Protocol error: Duplicate Root request, for $CVSROOT_DIRNAME
+error  " <<EOF
+Root $CVSROOT_DIRNAME
+Root $CVSROOT_DIRNAME
+Directory .
+$CVSROOT_DIRNAME
+Unchanged foo
+noop
+EOF
+
+	    # These cascading errors seem odd, but the client should have hung
+	    # up after the first.
+	    dotest server3-5 "$servercvs server" \
+"E Root somewhere/over/the/rainbow must be an absolute pathname
+error  
+E Protocol error: Root request missing
+error  " <<EOF
+Root somewhere/over/the/rainbow
+Directory .
+somewhere/over/the/rainbow
+Unchanged foo
+noop
+EOF
+	  fi
+	  ;;
+
+
+
 	client)
 	  # Some tests of the client (independent of the server).
 	  if $remote; then :; else
@@ -32527,6 +32585,63 @@ $CPROG \[commit aborted\]: \`Redirect' loop detected\.  Server misconfiguration$
 	  rmdir $TESTDIR/bogus
 	  rm $TESTDIR/serveme $HOME/.bashrc
 	  CVS_SERVER=$save_CVS_SERVER; export CVS_SERVER
+	  ;;
+
+
+
+	client2)
+	  # Test how the client handles error messages from the server.
+	  if $remote; then
+	    cat >$TESTDIR/serveme <<EOF
+#!$TESTSHELL
+# This is just as cheesy as the "client" tests made it out to be.
+echo "Valid-requests Root Valid-responses valid-requests Directory Entry Modified Unchanged Argument Argumentx ci co update"
+echo "E Root somewhere/over/the/rainbow must be an absolute pathname"
+echo "error  "
+echo "E Protocol error: Root request missing"
+echo "error  "
+cat >/dev/null
+EOF
+	    # Cygwin.  Pthffffffffft!
+	    if test -n "$remotehost"; then
+	      $CVS_RSH $remotehost "chmod +x $TESTDIR/serveme"
+	    else
+	      chmod +x $TESTDIR/serveme
+	    fi
+	    save_CVS_SERVER=$CVS_SERVER
+	    CVS_SERVER=$TESTDIR/serveme; export CVS_SERVER
+	    mkdir client2; cd client2
+	    dotest_fail client2-1 "$testcvs co first-dir" \
+"Root somewhere/over/the/rainbow must be an absolute pathname"
+
+	    cat >$TESTDIR/serveme <<EOF
+#!$TESTSHELL
+# This is just as cheesy as the "client" tests made it out to be.
+echo "Valid-requests Root Valid-responses valid-requests Directory Entry Modified Unchanged Argument Argumentx ci co update"
+echo "E Root somewhere/over/the/rainbow must be an absolute pathname"
+echo
+echo "error  "
+echo "E Protocol error: Root request missing"
+echo "error  "
+cat >/dev/null
+EOF
+	    # Cygwin.  Pthffffffffft!
+	    if test -n "$remotehost"; then
+	      $CVS_RSH $remotehost "chmod +x $TESTDIR/serveme"
+	    else
+	      chmod +x $TESTDIR/serveme
+	    fi
+	    dotest_fail client2-2 "$testcvs co first-dir" \
+"Root somewhere/over/the/rainbow must be an absolute pathname
+$CPROG checkout: warning: unrecognized response \`' from cvs server"
+
+	    dokeep
+
+	    cd ..
+	    rm -r client2
+	    rm $TESTDIR/serveme
+	    CVS_SERVER=$save_CVS_SERVER; export CVS_SERVER
+	  fi # skip the whole thing for local
 	  ;;
 
 
